// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders page 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-grid-row"
  >
    <div
      class="nhsuk-grid-column-two-thirds"
    >
      <div
        class="nhsuk-back-link nhsuk-u-margin-bottom-4"
      >
        <form
          action="/action"
        >
          <input
            name="form-id"
            readonly=""
            type="hidden"
            value="create-nhs-app-template-back"
          />
          <input
            name="nhsAppTemplateName"
            type="hidden"
            value=""
          />
          <input
            name="nhsAppTemplateMessage"
            type="hidden"
            value=""
          />
          <button
            class="nhsuk-back-link__link"
            type="submit"
          >
            <svg
              aria-hidden="true"
              class="nhsuk-icon nhsuk-icon__chevron-left"
              height="34"
              viewBox="0 0 24 24"
              width="34"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.5 12c0-.3.1-.5.3-.7l5-5c.4-.4 1-.4 1.4 0s.4 1 0 1.4L10.9 12l4.3 4.3c.4.4.4 1 0 1.4s-1 .4-1.4 0l-5-5c-.2-.2-.3-.4-.3-.7z"
              />
            </svg>
            Go back
          </button>
        </form>
      </div>
      <form
        action="/action"
      >
        <input
          name="form-id"
          readonly=""
          type="hidden"
          value="create-nhs-app-template"
        />
        <h1
          class="nhsuk-heading-xl"
          data-testid="page-heading"
        >
          Create NHS app message template
        </h1>
        <div>
          <label
            class="nhsuk-label"
            for="nhsAppTemplateName"
          >
            Template name
          </label>
          <div
            class="nhsuk-hint"
          >
            This will not be visible to recipients
          </div>
          <details
            class="nhsuk-details"
          >
            <summary
              class="nhsuk-details__summary"
            >
              <span
                class="nhsuk-details__summary-text"
              >
                Naming your templates
              </span>
            </summary>
            <div
              class="nhsuk-details__text"
            >
              <p>
                You should name your templates in a way that works best for your service or organisation.
              </p>
              <p>
                Common template names include the:
              </p>
              <ul>
                <li>
                  message channel it uses
                </li>
                <li>
                  subject or reason for the message
                </li>
                <li>
                  intended audience for the template
                </li>
                <li>
                  version number of the template
                </li>
              </ul>
              <p>
                For example, 'Email - covid19 2023 - over 65s - version 3'
              </p>
            </div>
          </details>
          <div
            class="nhsuk-form-group"
          >
            <input
              class="nhsuk-input"
              id="nhsAppTemplateName"
              name="nhsAppTemplateName"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="nhsuk-form-group"
        >
          <label
            class="nhsuk-label"
            for="nhsAppTemplateMessage"
            id="nhsAppTemplateMessage--label"
          >
            Message
          </label>
          <textarea
            aria-labelledby="nhsAppTemplateMessage--label"
            class="nhsuk-textarea"
            id="nhsAppTemplateMessage"
            maxlength="5000"
            name="nhsAppTemplateMessage"
            rows="10"
          />
        </div>
        <p
          style=""
        >
          0 of 5000 characters
        </p>
        <button
          aria-disabled="false"
          class="nhsuk-button"
          id="create-nhs-app-template-submit-button"
          type="submit"
        >
          Continue
        </button>
      </form>
    </div>
    <div
      class="nhsuk-grid-column-one-third"
    >
      Placeholder for personalisation and message formatting guidance
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders page one error 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-grid-row"
  >
    <div
      class="nhsuk-grid-column-two-thirds"
    >
      <div
        class="nhsuk-back-link nhsuk-u-margin-bottom-4"
      >
        <form
          action="/action"
        >
          <input
            name="form-id"
            readonly=""
            type="hidden"
            value="create-nhs-app-template-back"
          />
          <input
            name="nhsAppTemplateName"
            type="hidden"
            value=""
          />
          <input
            name="nhsAppTemplateMessage"
            type="hidden"
            value=""
          />
          <button
            class="nhsuk-back-link__link"
            type="submit"
          >
            <svg
              aria-hidden="true"
              class="nhsuk-icon nhsuk-icon__chevron-left"
              height="34"
              viewBox="0 0 24 24"
              width="34"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.5 12c0-.3.1-.5.3-.7l5-5c.4-.4 1-.4 1.4 0s.4 1 0 1.4L10.9 12l4.3 4.3c.4.4.4 1 0 1.4s-1 .4-1.4 0l-5-5c-.2-.2-.3-.4-.3-.7z"
              />
            </svg>
            Go back
          </button>
        </form>
      </div>
      <div
        class="nhsuk-error-summary"
      >
        <h2
          class="nhsuk-error-summary__title"
          data-testid="error-summary"
        >
          There is a problem
        </h2>
        <ul
          class="nhsuk-list nhsuk-error-summary__list"
        >
          <li>
            <a
              href="#nhsAppTemplateName"
            >
              Template name error
            </a>
          </li>
          <li>
            <a
              href="#nhsAppTemplateMessage"
            />
          </li>
        </ul>
      </div>
      <form
        action="/action"
      >
        <input
          name="form-id"
          readonly=""
          type="hidden"
          value="create-nhs-app-template"
        />
        <h1
          class="nhsuk-heading-xl"
          data-testid="page-heading"
        >
          Create NHS app message template
        </h1>
        <div
          class="nhsuk-form-group--error"
        >
          <label
            class="nhsuk-label"
            for="nhsAppTemplateName"
          >
            Template name
          </label>
          <div
            class="nhsuk-hint"
          >
            This will not be visible to recipients
          </div>
          <details
            class="nhsuk-details"
          >
            <summary
              class="nhsuk-details__summary"
            >
              <span
                class="nhsuk-details__summary-text"
              >
                Naming your templates
              </span>
            </summary>
            <div
              class="nhsuk-details__text"
            >
              <p>
                You should name your templates in a way that works best for your service or organisation.
              </p>
              <p>
                Common template names include the:
              </p>
              <ul>
                <li>
                  message channel it uses
                </li>
                <li>
                  subject or reason for the message
                </li>
                <li>
                  intended audience for the template
                </li>
                <li>
                  version number of the template
                </li>
              </ul>
              <p>
                For example, 'Email - covid19 2023 - over 65s - version 3'
              </p>
            </div>
          </details>
          <div
            class="nhsuk-form-group nhsuk-form-group--error"
          >
            <span
              class="nhsuk-error-message"
              id="nhsAppTemplateName-error-message"
            >
              <span
                class="nhsuk-u-visually-hidden"
              >
                Error: 
              </span>
              Template name error
            </span>
            <input
              class="nhsuk-input nhsuk-input--error"
              id="nhsAppTemplateName"
              name="nhsAppTemplateName"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="nhsuk-form-group"
        >
          <label
            class="nhsuk-label"
            for="nhsAppTemplateMessage"
            id="nhsAppTemplateMessage--label"
          >
            Message
          </label>
          <textarea
            aria-labelledby="nhsAppTemplateMessage--label"
            class="nhsuk-textarea"
            id="nhsAppTemplateMessage"
            maxlength="5000"
            name="nhsAppTemplateMessage"
            rows="10"
          />
        </div>
        <p
          style=""
        >
          0 of 5000 characters
        </p>
        <button
          aria-disabled="false"
          class="nhsuk-button"
          id="create-nhs-app-template-submit-button"
          type="submit"
        >
          Continue
        </button>
      </form>
    </div>
    <div
      class="nhsuk-grid-column-one-third"
    >
      Placeholder for personalisation and message formatting guidance
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders page with multiple errors 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-grid-row"
  >
    <div
      class="nhsuk-grid-column-two-thirds"
    >
      <div
        class="nhsuk-back-link nhsuk-u-margin-bottom-4"
      >
        <form
          action="/action"
        >
          <input
            name="form-id"
            readonly=""
            type="hidden"
            value="create-nhs-app-template-back"
          />
          <input
            name="nhsAppTemplateName"
            type="hidden"
            value=""
          />
          <input
            name="nhsAppTemplateMessage"
            type="hidden"
            value=""
          />
          <button
            class="nhsuk-back-link__link"
            type="submit"
          >
            <svg
              aria-hidden="true"
              class="nhsuk-icon nhsuk-icon__chevron-left"
              height="34"
              viewBox="0 0 24 24"
              width="34"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.5 12c0-.3.1-.5.3-.7l5-5c.4-.4 1-.4 1.4 0s.4 1 0 1.4L10.9 12l4.3 4.3c.4.4.4 1 0 1.4s-1 .4-1.4 0l-5-5c-.2-.2-.3-.4-.3-.7z"
              />
            </svg>
            Go back
          </button>
        </form>
      </div>
      <div
        class="nhsuk-error-summary"
      >
        <h2
          class="nhsuk-error-summary__title"
          data-testid="error-summary"
        >
          There is a problem
        </h2>
        <ul
          class="nhsuk-list nhsuk-error-summary__list"
        >
          <li>
            <a
              href="#nhsAppTemplateName"
            >
              Template name error
            </a>
          </li>
          <li>
            <a
              href="#nhsAppTemplateMessage"
            >
              Template message error
            </a>
          </li>
        </ul>
      </div>
      <form
        action="/action"
      >
        <input
          name="form-id"
          readonly=""
          type="hidden"
          value="create-nhs-app-template"
        />
        <h1
          class="nhsuk-heading-xl"
          data-testid="page-heading"
        >
          Create NHS app message template
        </h1>
        <div
          class="nhsuk-form-group--error"
        >
          <label
            class="nhsuk-label"
            for="nhsAppTemplateName"
          >
            Template name
          </label>
          <div
            class="nhsuk-hint"
          >
            This will not be visible to recipients
          </div>
          <details
            class="nhsuk-details"
          >
            <summary
              class="nhsuk-details__summary"
            >
              <span
                class="nhsuk-details__summary-text"
              >
                Naming your templates
              </span>
            </summary>
            <div
              class="nhsuk-details__text"
            >
              <p>
                You should name your templates in a way that works best for your service or organisation.
              </p>
              <p>
                Common template names include the:
              </p>
              <ul>
                <li>
                  message channel it uses
                </li>
                <li>
                  subject or reason for the message
                </li>
                <li>
                  intended audience for the template
                </li>
                <li>
                  version number of the template
                </li>
              </ul>
              <p>
                For example, 'Email - covid19 2023 - over 65s - version 3'
              </p>
            </div>
          </details>
          <div
            class="nhsuk-form-group nhsuk-form-group--error"
          >
            <span
              class="nhsuk-error-message"
              id="nhsAppTemplateName-error-message"
            >
              <span
                class="nhsuk-u-visually-hidden"
              >
                Error: 
              </span>
              Template name error
            </span>
            <input
              class="nhsuk-input nhsuk-input--error"
              id="nhsAppTemplateName"
              name="nhsAppTemplateName"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="nhsuk-form-group nhsuk-form-group--error"
        >
          <label
            class="nhsuk-label"
            for="nhsAppTemplateMessage"
            id="nhsAppTemplateMessage--label"
          >
            Message
          </label>
          <span
            class="nhsuk-error-message"
            id="nhsAppTemplateMessage-error-message"
          >
            <span
              class="nhsuk-u-visually-hidden"
            >
              Error: 
            </span>
            Template message error
          </span>
          <textarea
            aria-labelledby="nhsAppTemplateMessage--label"
            class="nhsuk-textarea nhsuk-textarea--error"
            id="nhsAppTemplateMessage"
            maxlength="5000"
            name="nhsAppTemplateMessage"
            rows="10"
          />
        </div>
        <p
          style=""
        >
          0 of 5000 characters
        </p>
        <button
          aria-disabled="false"
          class="nhsuk-button"
          id="create-nhs-app-template-submit-button"
          type="submit"
        >
          Continue
        </button>
      </form>
    </div>
    <div
      class="nhsuk-grid-column-one-third"
    >
      Placeholder for personalisation and message formatting guidance
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders page with preloaded field values 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-grid-row"
  >
    <div
      class="nhsuk-grid-column-two-thirds"
    >
      <div
        class="nhsuk-back-link nhsuk-u-margin-bottom-4"
      >
        <form
          action="/action"
        >
          <input
            name="form-id"
            readonly=""
            type="hidden"
            value="create-nhs-app-template-back"
          />
          <input
            name="nhsAppTemplateName"
            type="hidden"
            value="template-name"
          />
          <input
            name="nhsAppTemplateMessage"
            type="hidden"
            value="template-message"
          />
          <button
            class="nhsuk-back-link__link"
            type="submit"
          >
            <svg
              aria-hidden="true"
              class="nhsuk-icon nhsuk-icon__chevron-left"
              height="34"
              viewBox="0 0 24 24"
              width="34"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.5 12c0-.3.1-.5.3-.7l5-5c.4-.4 1-.4 1.4 0s.4 1 0 1.4L10.9 12l4.3 4.3c.4.4.4 1 0 1.4s-1 .4-1.4 0l-5-5c-.2-.2-.3-.4-.3-.7z"
              />
            </svg>
            Go back
          </button>
        </form>
      </div>
      <form
        action="/action"
      >
        <input
          name="form-id"
          readonly=""
          type="hidden"
          value="create-nhs-app-template"
        />
        <h1
          class="nhsuk-heading-xl"
          data-testid="page-heading"
        >
          Create NHS app message template
        </h1>
        <div>
          <label
            class="nhsuk-label"
            for="nhsAppTemplateName"
          >
            Template name
          </label>
          <div
            class="nhsuk-hint"
          >
            This will not be visible to recipients
          </div>
          <details
            class="nhsuk-details"
          >
            <summary
              class="nhsuk-details__summary"
            >
              <span
                class="nhsuk-details__summary-text"
              >
                Naming your templates
              </span>
            </summary>
            <div
              class="nhsuk-details__text"
            >
              <p>
                You should name your templates in a way that works best for your service or organisation.
              </p>
              <p>
                Common template names include the:
              </p>
              <ul>
                <li>
                  message channel it uses
                </li>
                <li>
                  subject or reason for the message
                </li>
                <li>
                  intended audience for the template
                </li>
                <li>
                  version number of the template
                </li>
              </ul>
              <p>
                For example, 'Email - covid19 2023 - over 65s - version 3'
              </p>
            </div>
          </details>
          <div
            class="nhsuk-form-group"
          >
            <input
              class="nhsuk-input"
              id="nhsAppTemplateName"
              name="nhsAppTemplateName"
              type="text"
              value="template-name"
            />
          </div>
        </div>
        <div
          class="nhsuk-form-group"
        >
          <label
            class="nhsuk-label"
            for="nhsAppTemplateMessage"
            id="nhsAppTemplateMessage--label"
          >
            Message
          </label>
          <textarea
            aria-labelledby="nhsAppTemplateMessage--label"
            class="nhsuk-textarea"
            id="nhsAppTemplateMessage"
            maxlength="5000"
            name="nhsAppTemplateMessage"
            rows="10"
          >
            template-message
          </textarea>
        </div>
        <p
          style=""
        >
          16 of 5000 characters
        </p>
        <button
          aria-disabled="false"
          class="nhsuk-button"
          id="create-nhs-app-template-submit-button"
          type="submit"
        >
          Continue
        </button>
      </form>
    </div>
    <div
      class="nhsuk-grid-column-one-third"
    >
      Placeholder for personalisation and message formatting guidance
    </div>
  </div>
</DocumentFragment>
`;
